masterPortfolio/styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter+Tight&display=swap');

body {
  font-family: 'Inter Tight', sans-serif;
  margin: 0;
  padding: 0;
  line-height: 1.6;
  background-color: #171717;
  color: #fff;
}

header {
  color: #fff;
  padding: 10px 0;
  text-align: center;
}

/* Hide the logo on small screens when the menu is open */
.navbar-collapse.show #logo {
  display: none;
}

/* Center the logo for small screens */
.navbar-brand {
  margin: 0 auto;
}

.navbar-brand {
  color: #fff !important; /* Set the color of the brand (JY) to white */
  transition: transform 0.5s, box-shadow 0.5s; /* Add this line */
  font-size: 30px; /* adjust this value as needed */
}

.navbar-brand:hover {
  transform: translateY(-5px) scale(1.05); /* New transform effect on hover */
  box-shadow: 0 0 1rem rgba(0, 0, 0, .5); /* New box shadow effect on hover */
}

/* Center the navigation links for small screens */
.navbar-nav.ml-auto {
  text-align: center; 
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  flex-direction: column;
}

.title {
  text-align: left;
  padding-top: 10rem;
  padding-bottom: 25rem;
}

.navbar-brand[href="#"] {
  color: #00FFC5 !important;
}

#about 
{
  margin-top: 200px;
}

#experience 
{ 
  margin-top: 200px;
}

#projects 
{

  margin-top: 200px
}

#skills 
{
  margin-top: 200px;
}

#resume 
{
  margin-top: 200px;
}

.btn.resume-button {
  color: #00FFC5;
  border-color: #00FFC5;
  transition: transform 0.5s, box-shadow 0.5s; /* Add this line */
  font-size: 15px;
}

.btn.resume-button:hover {
  transform: translateY(-5px) scale(1.05); /* New transform effect on hover */
  box-shadow: 0 0 1rem rgba(0, 0, 0, .5); /* New box shadow effect on hover */
}

.nav-item a[href="#resume"] {
  color: #00FFC5 !important;
}

#contact 
{
  margin-top: 200px;
}

.nav-item a[href="#about"]:hover,
.nav-item a[href="#experience"]:hover,
.nav-item a[href="#projects"]:hover,
.nav-item a[href="#skills"]:hover {
  color: #00FFC5 !important;
}

.nav-item a[href="#resume"]:hover {
  color: #fff !important;
}

.nav-item {
  margin-right: 20px; /* adjust this value as needed */
}

.typing
{
  text-align: left;
}

/* Set the styles for h1 and h2 elements */
h1 {
  font-style: normal;
  font-weight: 600;
  font-size: 80px;
  line-height: 88px;
  color: #ccd6f6; /* Color for "Jordan Yee" */
  margin-bottom: 5px; 
  word-spacing: 2px; /* adjust as needed */
}

h6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 18px;
  color: #00FFC5;
  margin-bottom: 30px; 
  word-spacing: 5px; /* adjust as needed */
}

.white-text {
  color: #8892b0;
  font-size: 20px;
  max-width: 600px;  /* adjust as needed */
}

.title h1 span {
  font-style: normal;
  font-weight: 600;
  font-size: 80px;
  line-height: 72px;
  color: #8892b0; /* Color for "I like..." */
  word-spacing: 2px; /* adjust as needed */
  display: inline-block; /* add this line */
  margin-bottom: 30px; /* adjust as needed */
}

main {
  padding: 20px;
  flex-grow: 1;
}

section {
  margin-bottom: 20px;
}

article {
  margin-bottom: 15px;
}

footer {
  color: #fff;
  text-align: center;
  padding: 10px 0;
}

@keyframes blink {
  0%, 100% { opacity: 1; }
  50% { opacity: 0; }
}

.typing::after {
  content: ' ';
  display: inline;
  margin-left: 0;
  border-right: .2ch solid;
  transform: translateY(-.15em);
  animation: blink 1s steps(1) infinite;
}

/* Make the navbar transparent */
.navbar {
  background-color: transparent;
  position: relative; /* add this line if not already positioned */
  z-index: 100; /* adjust this value as needed */
}

/* Remove background color and border from the navbar links */
.navbar-nav .nav-link {
  background-color: transparent;
  border: none;
  
}

/* Add custom CSS to make the navbar transparent and text white */
.navbar {
  background-color: transparent !important;
}
.navbar-brand {
  color: #fff !important; /* Set the color of the brand (JY) to white */
  font-size: 25px !important; 
}

.navbar-nav .nav-link {
  color: #fff !important;
  font-size: 15px;
}

/* Set the container to take full width of the viewport */
.container-fluid {
  padding-left: 0;
  padding-right: 0;
}

/* Fix the alignment of the JY logo on small screens */
@media (max-width: 767px) {
  .navbar-brand {
    margin: 0%;
  }
}

@media (max-width: 767px) {
  .title h1 {
    font-size: 26px;
    line-height: 25px;
  }
  .title h1 span {
    font-size: 26px;
    line-height: 22px;
    }
}


/* Change the dropdown menu icon to white */
.navbar-toggler-icon {
  background-color: #00FFC5;
}

.lines {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 100%;
  margin: auto;
  width: 90vw;
  z-index: 1; /* New z-index property */
}
  
.line {
  position: absolute;
  width: 1px;
  height: 100%;
  top: 0;
  left: 50%;
  background: rgba(255, 255, 255, 0.1);
  overflow: hidden;
}

.line::after {
  content: '';
  display: block;
  position: absolute;
  height: 15vh;
  width: 100%;
  top: -50%;
  left: 0;
  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #ffffff 75%, #ffffff 100%);
  animation: drop 7s 0s infinite;
  animation-fill-mode: forwards;
  animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
}
  
.line:nth-child(1) {
  margin-left: -25%;
}

.line:nth-child(1)::after {
  animation-delay: 2s;
}
  
.line:nth-child(3) {
  margin-left: 25%;
}

.line:nth-child(3)::after {
  animation-delay: 2.5s;
}
    
@keyframes drop {
  0% {
    top: -50%;
  }
  100% {
    top: 110%;
  }
}

